x86/kvm: Fix SEV check in sev_map_percpu_data() (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16544,6 +16544,7 @@
 	patches.suse/KVM-s390-fix-cc-for-successful-PQAP.patch
 	patches.suse/KVM-x86-Check-irqchip-mode-before-create-PIT.patch
 	patches.suse/KVM-x86-Give-a-hint-when-Win2016-might-fail-to-boot-.patch
+	patches.suse/x86-kvm-Fix-SEV-check-in-sev_map_percpu_data.patch
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 	patches.suse/crypto-algif_hash-Remove-bogus-SGL-free-on-zero-leng.patch
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
