dmaengine: dw-edma: Rename dw_edma_core_ops structure to dw_edma_plat_ops (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5306,6 +5306,7 @@
 	patches.suse/sh-Avoid-using-IRQ0-on-SH3-and-SH4.patch
 	patches.suse/sh-dma-Fix-DMA-channel-offset-calculation.patch
 	patches.suse/watchdog-sp5100_tco-support-Hygon-FCH-SCH-Serv.patch
+	patches.suse/dmaengine-dw-edma-Rename-dw_edma_core_ops-structure-.patch
 	patches.suse/bus-ixp4xx-fix-IXP4XX_EXP_T1_MASK.patch
 	patches.suse/s390-decompressor-fix-misaligned-symbol-build-e.patch
 	patches.suse/s390-zcrypt-do-not-retry-administrative-request.patch
