--- a/series.conf
+++ b/series.conf
@@ -13273,6 +13273,7 @@
 	patches.suse/PCI-sysfs-Protect-driver-s-D3cold-preference-from-us.patch
 	patches.suse/x86-PCI-Avoid-PME-from-D3hot-D3cold-for-AMD-Rembrand.patch
 	patches.suse/PCI-Lengthen-reset-delay-for-VideoPropulsion-Torrent.patch
+	patches.suse/PCI-dwc-Add-host_post_init-callback.patch
 	patches.suse/PCI-qcom-ep-Add-dedicated-callback-for-writing-to-DB.patch
 	patches.suse/PCI-dwc-Add-dw_pcie_link_set_max_link_width.patch
 	patches.suse/PCI-dwc-Add-missing-PCI_EXP_LNKCAP_MLW-handling.patch
