--- a/series.conf
+++ b/series.conf
@@ -17133,6 +17133,7 @@
 	patches.suse/mm-migrate-add-more-comments-for-selecting-target-node-randomly.patch
 	patches.suse/mm-migrate-move-node-demotion-code-to-near-its-user.patch
 	patches.suse/mm-migrate-remove-redundant-variables-used-in-a-for-loop.patch
+	patches.suse/0001-mm-hwpoison-mf_mutex-for-soft-offline-and-unpoison.patch
 	patches.suse/mm-hmm.c-allow-VM_MIXEDMAP-to-work-with-hmm_range_fault.patch
 	patches.suse/1139-drm-i915-pxp-Hold-RPM-wakelock-during-PXP-unbind.patch
 	patches.suse/drm-i915-don-t-call-free_mmap_offset-when-purging.patch
