--- a/series.conf
+++ b/series.conf
@@ -17135,6 +17135,7 @@
 	patches.suse/mm-migrate-remove-redundant-variables-used-in-a-for-loop.patch
 	patches.suse/0001-mm-hwpoison-mf_mutex-for-soft-offline-and-unpoison.patch
 	patches.suse/0002-mm-hwpoison-remove-MF_MSG_BUDDY_2ND-and-MF_MSG_POISO.patch
+	patches.suse/0003-mm-hwpoison-fix-unpoison_memory.patch
 	patches.suse/mm-hmm.c-allow-VM_MIXEDMAP-to-work-with-hmm_range_fault.patch
 	patches.suse/1139-drm-i915-pxp-Hold-RPM-wakelock-during-PXP-unbind.patch
 	patches.suse/drm-i915-don-t-call-free_mmap_offset-when-purging.patch
