--- a/series.conf
+++ b/series.conf
@@ -13278,6 +13278,7 @@
 	patches.suse/PCI-qcom-ep-Add-dedicated-callback-for-writing-to-DB.patch
 	patches.suse/PCI-dwc-Add-dw_pcie_link_set_max_link_width.patch
 	patches.suse/PCI-dwc-Add-missing-PCI_EXP_LNKCAP_MLW-handling.patch
+	patches.suse/PCI-dwc-endpoint-Introduce-.pre_init-and-.deinit.patch
 	patches.suse/misc-pci_endpoint_test-Add-Device-ID-for-R-Car-S4-8-.patch
 	patches.suse/PCI-qcom-Use-PCIE_SPEED2MBS_ENC-macro-for-encoding-l.patch
 	patches.suse/atm-iphase-Do-PCI-error-checks-on-own-line.patch
