PCI: dwc: Drop host prefix from struct dw_pcie_host_ops members (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16097,6 +16097,7 @@
 	patches.suse/PCI-switchtec-Fix-stdev_release-crash-after-surprise.patch
 	patches.suse/PCI-Add-ACS-quirk-for-more-Zhaoxin-Root-Ports.patch
 	patches.suse/PCI-dwc-endpoint-Fix-dw_pcie_ep_raise_msix_irq-align.patch
+	patches.suse/PCI-dwc-Drop-host-prefix-from-struct-dw_pcie_host_op.patch
 	patches.suse/PCI-keystone-Fix-race-condition-when-initializing-PH.patch
 	patches.suse/PCI-mediatek-Clear-interrupt-status-before-dispatchi.patch
 	patches.suse/PCI-mediatek-gen3-Fix-translation-window-size-calcul.patch
