powerpc/pseries/papr-sysparm: use u8 arrays for payloads (jsc#PED-4486 git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16624,6 +16624,9 @@
 	patches.suse/scsi-lpfc-Use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 
+	# powerpc/linux fixes
+	patches.suse/powerpc-pseries-papr-sysparm-use-u8-arrays-for-paylo.patch
+
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
 	patches.suse/x86-mm-Fix-memory-encryption-features-advertisement
