ext4: fix deadlock due to mbcache entry corruption (bsc#1207653 bsc#1219915).

--- a/series.conf
+++ b/series.conf
@@ -58407,6 +58407,7 @@
 	patches.suse/ext4-fix-corruption-when-online-resizing-a-1K-bigall.patch
 	patches.suse/ext4-fix-uninititialized-value-in-ext4_evict_inode.patch
 	patches.suse/ext4-avoid-BUG_ON-when-creating-xattrs.patch
+	patches.suse/ext4-fix-deadlock-due-to-mbcache-entry-corruption.patch
 	patches.suse/ext4-fix-kernel-BUG-in-ext4_write_inline_data_end.patch
 	patches.suse/nfsd-don-t-call-nfsd_file_put-from-client-states-seq.patch
 	patches.suse/SUNRPC-Don-t-leak-netobj-memory-when-gss_read_proxy_.patch
