mbcache: Fixup kABI of mb_cache_entry (bsc#1207653 bsc#1219915).

--- a/series.conf
+++ b/series.conf
@@ -59366,6 +59366,7 @@
 	patches.kabi/media-dvb_net-kabi-workaround.patch
 
 	patches.kabi/perf-Disallow-mis-matched-inherited-group-reads-kabi-patch
+	patches.kabi/mbcache-entry-flags-kabi-fixup.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
