--- a/series.conf
+++ b/series.conf
@@ -614,6 +614,7 @@
 	patches.suse/rcu-Make-rcu_cpu_starting-rely-on-interrupts-be.patch
 	patches.suse/rcu-tasks-Stop-rcu_tasks_invoke_cbs-from-using-.patch
 	patches.suse/rcu-tasks-Avoid-pr_info-with-spin-lock-in-cblis.patch
+	patches.suse/locktorture-Add-long_hold-to-adjust-lock-hold-delays.patch
 	patches.suse/rcutorture-Correct-name-of-use_softirq-module-p.patch
 	patches.suse/rcu-rcuscale-Move-rcu_scale_-after-kfree_scale_.patch
 	patches.suse/rcu-rcuscale-Stop-kfree_scale_thread-thread-s-a.patch
