powerpc/kcsan: Properly instrument arch_spin_unlock() (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -4129,6 +4129,7 @@
 	patches.suse/csky-fix-up-lock_mm_and_find_vma-conversion.patch
 	patches.suse/LoongArch-Include-KBUILD_CPPFLAGS-in-CHECKFLAGS.patch
 	patches.suse/kcsan-Don-t-expect-64-bits-atomic-builtins-from.patch
+	patches.suse/powerpc-kcsan-Properly-instrument-arch_spin_unlock.patch
 	patches.suse/powerpc-interrupt-Don-t-read-MSR-from-interrupt.patch
 	patches.suse/powerpc-signal32-Force-inlining-of-__unsafe_sav.patch
 	patches.suse/powerpc-64s-Fix-VAS-mm-use-after-free.patch
