rcutorture: Dump grace-period state upon rtort_pipe_count incidents (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -6998,6 +6998,7 @@
 	patches.suse/Compiler-Attributes-counted_by-Adjust-name-and-ident.patch
 	patches.suse/kallsyms-Fix-kallsyms_selftest-failure.patch
 	patches.suse/refscale-Fix-uninitalized-use-of-wait_queue_head_t.patch
+	patches.suse/rcutorture-Dump-grace-period-state-upon-rtort_pipe_c.patch
 	patches.suse/clocksource-Handle-negative-skews-in-skew-is-too-lar.patch
 	patches.suse/x86-tsc-Extend-watchdog-check-exemption-to-4-Sockets-platf.patch
 	patches.suse/irqchip-loongson-eiointc-Fix-return-value-checking-o.patch
