--- a/series.conf
+++ b/series.conf
@@ -7000,6 +7000,7 @@
 	patches.suse/refscale-Fix-uninitalized-use-of-wait_queue_head_t.patch
 	patches.suse/rcutorture-Dump-grace-period-state-upon-rtort_pipe_c.patch
 	patches.suse/torture-Support-randomized-shuffling-for-proxy-exec-.patch
+	patches.suse/torture-Add-a-kthread-creation-callback-to-_torture_.patch
 	patches.suse/clocksource-Handle-negative-skews-in-skew-is-too-lar.patch
 	patches.suse/x86-tsc-Extend-watchdog-check-exemption-to-4-Sockets-platf.patch
 	patches.suse/irqchip-loongson-eiointc-Fix-return-value-checking-o.patch
