--- a/series.conf
+++ b/series.conf
@@ -7002,6 +7002,7 @@
 	patches.suse/torture-Support-randomized-shuffling-for-proxy-exec-.patch
 	patches.suse/torture-Add-a-kthread-creation-callback-to-_torture_.patch
 	patches.suse/torture-Add-lock_torture-writer_fifo-module-paramete.patch
+	patches.suse/torture-Make-torture_hrtimeout_-use-TASK_IDLE.patch
 	patches.suse/clocksource-Handle-negative-skews-in-skew-is-too-lar.patch
 	patches.suse/x86-tsc-Extend-watchdog-check-exemption-to-4-Sockets-platf.patch
 	patches.suse/irqchip-loongson-eiointc-Fix-return-value-checking-o.patch
