--- a/series.conf
+++ b/series.conf
@@ -7004,6 +7004,7 @@
 	patches.suse/torture-Add-lock_torture-writer_fifo-module-paramete.patch
 	patches.suse/torture-Make-torture_hrtimeout_-use-TASK_IDLE.patch
 	patches.suse/torture-Move-torture_onoff-timeouts-to-hrtimers.patch
+	patches.suse/torture-Move-torture_shuffle-timeouts-to-hrtimers.patch
 	patches.suse/clocksource-Handle-negative-skews-in-skew-is-too-lar.patch
 	patches.suse/x86-tsc-Extend-watchdog-check-exemption-to-4-Sockets-platf.patch
 	patches.suse/irqchip-loongson-eiointc-Fix-return-value-checking-o.patch
