--- a/series.conf
+++ b/series.conf
@@ -7007,6 +7007,7 @@
 	patches.suse/torture-Move-torture_shuffle-timeouts-to-hrtimers.patch
 	patches.suse/torture-Move-stutter_wait-timeouts-to-hrtimers.patch
 	patches.suse/torture-Stop-right-shifting-torture_random-return-va.patch
+	patches.suse/rcutorture-Stop-right-shifting-torture_random-return.patch
 	patches.suse/clocksource-Handle-negative-skews-in-skew-is-too-lar.patch
 	patches.suse/x86-tsc-Extend-watchdog-check-exemption-to-4-Sockets-platf.patch
 	patches.suse/irqchip-loongson-eiointc-Fix-return-value-checking-o.patch
