--- a/series.conf
+++ b/series.conf
@@ -12219,6 +12219,7 @@
 	patches.suse/x86-amd_nb-Add-AMD-Family-MI300-PCI-IDs.patch
 	patches.suse/x86-amd_nb-Use-Family-19h-Models-60h-7Fh-Function-4-IDs.patch
 	patches.suse/cleanup-make-no_free_ptr-_must_check.patch
+	patches.suse/futex-Use-a-folio-instead-of-a-page.patch
 	patches.suse/sched-Constrain-locks-in-sched_submit_work.patch
 	patches.suse/locking-rtmutex-Avoid-unconditional-slowpath-for-DEBUG_RT_MUTEXES.patch
 	patches.suse/sched-Extract-__schedule_loop.patch
