--- a/series.conf
+++ b/series.conf
@@ -12227,6 +12227,7 @@
 	patches.suse/locking-rtmutex-Use-rt_mutex-specific-scheduler-helpers.patch
 	patches.suse/locking-rtmutex-Add-a-lockdep-assert-to-catch-potential-nested-blocking.patch
 	patches.suse/asm-generic-ticket-lock-Optimize-arch_spin_value_unl.patch
+	patches.suse/locking-ww_mutex-test-Use-prng-instead-of-rng-to-avo.patch
 	patches.suse/numa-Generalize-numa_map_to_online_node.patch
 	patches.suse/sched-fair-Fix-open-coded-numa_nearest_node.patch
 	patches.suse/sched-topology-Fix-sched_numa_find_nth_cpu-in-CPU-less-case.patch
