--- a/series.conf
+++ b/series.conf
@@ -12229,6 +12229,7 @@
 	patches.suse/asm-generic-ticket-lock-Optimize-arch_spin_value_unl.patch
 	patches.suse/locking-ww_mutex-test-Use-prng-instead-of-rng-to-avo.patch
 	patches.suse/locking-ww_mutex-test-Fix-potential-workqueue-corrup.patch
+	patches.suse/locking-ww_mutex-test-Make-sure-we-bail-out-instead-.patch
 	patches.suse/numa-Generalize-numa_map_to_online_node.patch
 	patches.suse/sched-fair-Fix-open-coded-numa_nearest_node.patch
 	patches.suse/sched-topology-Fix-sched_numa_find_nth_cpu-in-CPU-less-case.patch
