--- a/series.conf
+++ b/series.conf
@@ -12314,6 +12314,7 @@
 	patches.suse/clocksource-drivers-timer-atmel-tcb-Fix-initializati.patch
 	patches.suse/x86-cpu-hygon-Fix-the-CPU-topology-evaluation-for-real.patch
 	patches.suse/torture-Share-torture_random_state-with-torture_shuf.patch
+	patches.suse/torture-Make-torture_hrtimeout_ns-take-an-hrtimer-mo.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
