locktorture: Add readers_bind and writers_bind module parameters (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -12316,6 +12316,7 @@
 	patches.suse/torture-Share-torture_random_state-with-torture_shuf.patch
 	patches.suse/torture-Make-torture_hrtimeout_ns-take-an-hrtimer-mo.patch
 	patches.suse/torture-Move-rcutorture_sched_setaffinity-out-of-rcu.patch
+	patches.suse/locktorture-Add-readers_bind-and-writers_bind-module.patch
 	patches.suse/rcutorture-Fix-stuttering-races-and-other-issues.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
