--- a/series.conf
+++ b/series.conf
@@ -12318,6 +12318,7 @@
 	patches.suse/torture-Move-rcutorture_sched_setaffinity-out-of-rcu.patch
 	patches.suse/locktorture-Add-readers_bind-and-writers_bind-module.patch
 	patches.suse/rcutorture-Fix-stuttering-races-and-other-issues.patch
+	patches.suse/locktorture-Alphabetize-torture_param-entries.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
