--- a/series.conf
+++ b/series.conf
@@ -12319,6 +12319,7 @@
 	patches.suse/locktorture-Add-readers_bind-and-writers_bind-module.patch
 	patches.suse/rcutorture-Fix-stuttering-races-and-other-issues.patch
 	patches.suse/locktorture-Alphabetize-torture_param-entries.patch
+	patches.suse/locktorture-Consolidate-if-statements-in-lock_tortur.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
