--- a/series.conf
+++ b/series.conf
@@ -12320,6 +12320,7 @@
 	patches.suse/rcutorture-Fix-stuttering-races-and-other-issues.patch
 	patches.suse/locktorture-Alphabetize-torture_param-entries.patch
 	patches.suse/locktorture-Consolidate-if-statements-in-lock_tortur.patch
+	patches.suse/locktorture-Add-acq_writer_lim-to-complain-about-lon.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
