locktorture: Add new module parameters to lock_torture_print_module_parms() (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -12322,6 +12322,7 @@
 	patches.suse/locktorture-Consolidate-if-statements-in-lock_tortur.patch
 	patches.suse/locktorture-Add-acq_writer_lim-to-complain-about-lon.patch
 	patches.suse/torture-Print-out-torture-module-parameters.patch
+	patches.suse/locktorture-Add-new-module-parameters-to-lock_tortur.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
