--- a/series.conf
+++ b/series.conf
@@ -12324,6 +12324,7 @@
 	patches.suse/torture-Print-out-torture-module-parameters.patch
 	patches.suse/locktorture-Add-new-module-parameters-to-lock_tortur.patch
 	patches.suse/locktorture-Add-call_rcu_chains-module-parameter.patch
+	patches.suse/doc-Catch-up-update-for-locktorture-module-parameter.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
