--- a/series.conf
+++ b/series.conf
@@ -12326,6 +12326,7 @@
 	patches.suse/locktorture-Add-call_rcu_chains-module-parameter.patch
 	patches.suse/doc-Catch-up-update-for-locktorture-module-parameter.patch
 	patches.suse/locktorture-Rename-readers_bind-writers_bind-to-bind.patch
+	patches.suse/rcutorture-Replace-schedule_timeout-1-jiffy-waits-wi.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
