rcutorture: Traverse possible cpu to set maxcpu in rcu_nocb_toggle() (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -12327,6 +12327,7 @@
 	patches.suse/doc-Catch-up-update-for-locktorture-module-parameter.patch
 	patches.suse/locktorture-Rename-readers_bind-writers_bind-to-bind.patch
 	patches.suse/rcutorture-Replace-schedule_timeout-1-jiffy-waits-wi.patch
+	patches.suse/rcutorture-Traverse-possible-cpu-to-set-maxcpu-in-rc.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
