--- a/series.conf
+++ b/series.conf
@@ -12328,6 +12328,7 @@
 	patches.suse/locktorture-Rename-readers_bind-writers_bind-to-bind.patch
 	patches.suse/rcutorture-Replace-schedule_timeout-1-jiffy-waits-wi.patch
 	patches.suse/rcutorture-Traverse-possible-cpu-to-set-maxcpu-in-rc.patch
+	patches.suse/locktorture-Check-the-correct-variable-for-allocatio.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
