--- a/series.conf
+++ b/series.conf
@@ -16109,6 +16109,7 @@
 	patches.suse/of-Fix-double-free-in-of_parse_phandle_with_args_map.patch
 	patches.suse/of-unittest-Fix-of_count_phandle_with_args-expected-.patch
 	patches.suse/locktorture-Increase-Hamming-distance-between-call_r.patch
+	patches.suse/rcutorture-Add-fqs_holdoff-check-before-fqs_task-is-.patch
 	patches.suse/scripts-decode_stacktrace.sh-optionally-use-LLVM-uti.patch
 	patches.suse/kernel-crash_core.c-make-__crash_hotplug_lock-static.patch
 	patches.suse/selftests-mm-hugepage-vmemmap-fails-on-64K-page-size.patch
