x86/smpboot: Avoid pointless delay calibration if TSC is synchronized (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -459,6 +459,7 @@
 	patches.suse/x86-fpu-Mark-init-functions-__init.patch
 	patches.suse/x86-fpu-Move-FPU-initialization-into-arch_cpu_f.patch
 	patches.suse/x86-mem_encrypt-Unbreak-the-AMD_MEM_ENCRYPT-n-b.patch
+	patches.suse/x86-smpboot-Avoid-pointless-delay-calibration-if-TSC.patch
 	patches.suse/posix-timers-Prevent-RT-livelock-in-itimer_dele.patch
 	patches.suse/posix-timers-Ensure-timer-ID-search-loop-limit-.patch
 	patches.suse/tick-rcu-Fix-bogus-ratelimit-condition.patch
