clocksource: Replace all non-returning strlcpy with strscpy (bsc#1219953).

--- a/series.conf
+++ b/series.conf
@@ -729,6 +729,7 @@
 	patches.suse/0021-drm-mediatek-Replace-all-non-returning-strlcpy-with-.patch
 	patches.suse/0022-drm-sun4i-hdmi-Replace-all-non-returning-strlcpy-wit.patch
 	patches.suse/0023-drm-i2c-tda998x-Replace-all-non-returning-strlcpy-wi.patch
+	patches.suse/clocksource-Replace-all-non-returning-strlcpy-with-s.patch
 	patches.suse/acpi-Replace-struct-acpi_table_slit-1-element-array-.patch
 	patches.suse/jbd2-Avoid-printing-outside-the-boundary-of-the-buff.patch
 	patches.suse/lib-string_helpers-Change-returned-value-of-the-strr.patch
