--- a/series.conf
+++ b/series.conf
@@ -43145,6 +43145,7 @@
 	patches.suse/PCI-acpiphp-Use-pci_assign_unassigned_bridge_resourc.patch
 	patches.suse/0002-nvme-tcp-fix-potential-unbalanced-freeze-unfreeze.patch
 	patches.suse/0003-nvme-rdma-fix-potential-unbalanced-freeze-unfreeze.patch
+	patches.suse/0001-mm-memory-failure-fix-potential-unexpected-return-va.patch
 	patches.suse/nilfs2-fix-use-after-free-of-nilfs_root-in-dirtying-.patch
 	patches.suse/hwmon-pmbus-bel-pfe-Enable-PMBUS_SKIP_STATUS_CHECK-f.patch
 	patches.suse/RDMA-umem-Set-iova-in-ODP-flow.patch
