btrfs: add new unused block groups to the list of unused block groups (bsc#1219930).

--- a/series.conf
+++ b/series.conf
@@ -1432,6 +1432,7 @@
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 	patches.suse/btrfs-add-and-use-helper-to-check-if-block-group-is-.patch
 	patches.suse/btrfs-do-not-delete-unused-block-group-if-it-may-be-.patch
+	patches.suse/btrfs-add-new-unused-block-groups-to-the-list-of-unu.patch
 
 	########################################################
 	# end of sorted patches
