--- a/series.conf
+++ b/series.conf
@@ -1430,6 +1430,7 @@
 	patches.suse/bcachefs-fix-incorrect-usage-of-REQ_OP_FLUSH.patch
 	patches.suse/mm-huge_memory-don-t-force-huge-page-alignment-on-32.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
+	patches.suse/btrfs-add-and-use-helper-to-check-if-block-group-is-.patch
 
 	########################################################
 	# end of sorted patches
