btrfs: do not delete unused block group if it may be used soon (bsc#1219930).

--- a/series.conf
+++ b/series.conf
@@ -1431,6 +1431,7 @@
 	patches.suse/mm-huge_memory-don-t-force-huge-page-alignment-on-32.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 	patches.suse/btrfs-add-and-use-helper-to-check-if-block-group-is-.patch
+	patches.suse/btrfs-do-not-delete-unused-block-group-if-it-may-be-.patch
 
 	########################################################
 	# end of sorted patches
