--- a/series.conf
+++ b/series.conf
@@ -1433,6 +1433,7 @@
 	patches.suse/btrfs-add-and-use-helper-to-check-if-block-group-is-.patch
 	patches.suse/btrfs-do-not-delete-unused-block-group-if-it-may-be-.patch
 	patches.suse/btrfs-add-new-unused-block-groups-to-the-list-of-unu.patch
+	patches.suse/btrfs-don-t-refill-whole-delayed-refs-block-reserve-.patch
 
 	########################################################
 	# end of sorted patches
