--- a/series.conf
+++ b/series.conf
@@ -1562,6 +1562,7 @@
 	patches.suse/btrfs-do-not-delete-unused-block-group-if-it-may-be-.patch
 	patches.suse/btrfs-add-new-unused-block-groups-to-the-list-of-unu.patch
 	patches.suse/btrfs-don-t-refill-whole-delayed-refs-block-reserve-.patch
+	patches.suse/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
 
 	########################################################
 	# end of sorted patches
