qca_debug: Fix ethtool -G iface tx behavior (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14850,6 +14850,7 @@
 	patches.suse/team-Fix-use-after-free-when-an-option-instance-allo.patch
 	patches.suse/octeon_ep-initialise-control-mbox-tasks-before-using.patch
 	patches.suse/qca_debug-Prevent-crash-on-TX-ring-changes.patch
+	patches.suse/qca_debug-Fix-ethtool-G-iface-tx-behavior.patch
 	patches.suse/bnxt_en-Clear-resource-reservation-during-resume.patch
 	patches.suse/bnxt_en-Fix-skb-recycling-logic-in-bnxt_deliver_skb.patch
 	patches.suse/bnxt_en-Fix-wrong-return-value-check-in-bnxt_close_n.patch
