net: fec: correct queue selection (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14858,6 +14858,7 @@
 	patches.suse/bnxt_en-Fix-HWTSTAMP_FILTER_ALL-packet-timestamp-log.patch
 	patches.suse/atm-solos-pci-Fix-potential-deadlock-on-cli_queue_lo.patch
 	patches.suse/atm-solos-pci-Fix-potential-deadlock-on-tx_queue_loc.patch
+	patches.suse/net-fec-correct-queue-selection.patch
 	patches.suse/octeontx2-af-fix-a-use-after-free-in-rvu_nix_registe.patch
 	patches.suse/octeon_ep-explicitly-test-for-firmware-ready-value.patch
 	patches.suse/octeontx2-pf-Fix-promisc-mcam-entry-action.patch
