--- a/series.conf
+++ b/series.conf
@@ -14872,6 +14872,7 @@
 	patches.suse/net-ena-Fix-DMA-syncing-in-XDP-path-when-SWIOTLB-is-.patch
 	patches.suse/net-ena-Fix-XDP-redirection-error.patch
 	patches.suse/dpll-sanitize-possible-null-pointer-dereference-in-d.patch
+	patches.suse/stmmac-dwmac-loongson-Make-sure-MDIO-is-initialized-.patch
 	patches.suse/vsock-virtio-Fix-unsigned-integer-wrap-around-in-vir.patch
 	patches.suse/iavf-Introduce-new-state-machines-for-flow-director.patch
 	patches.suse/iavf-Handle-ntuple-on-off-based-on-new-state-machine.patch
