stmmac: dwmac-loongson: drop useless check for compatible fallback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14873,6 +14873,7 @@
 	patches.suse/net-ena-Fix-XDP-redirection-error.patch
 	patches.suse/dpll-sanitize-possible-null-pointer-dereference-in-d.patch
 	patches.suse/stmmac-dwmac-loongson-Make-sure-MDIO-is-initialized-.patch
+	patches.suse/stmmac-dwmac-loongson-drop-useless-check-for-compati.patch
 	patches.suse/vsock-virtio-Fix-unsigned-integer-wrap-around-in-vir.patch
 	patches.suse/iavf-Introduce-new-state-machines-for-flow-director.patch
 	patches.suse/iavf-Handle-ntuple-on-off-based-on-new-state-machine.patch
