--- a/series.conf
+++ b/series.conf
@@ -14875,6 +14875,7 @@
 	patches.suse/stmmac-dwmac-loongson-Make-sure-MDIO-is-initialized-.patch
 	patches.suse/stmmac-dwmac-loongson-drop-useless-check-for-compati.patch
 	patches.suse/vsock-virtio-Fix-unsigned-integer-wrap-around-in-vir.patch
+	patches.suse/dpaa2-switch-fix-size-of-the-dma_unmap.patch
 	patches.suse/iavf-Introduce-new-state-machines-for-flow-director.patch
 	patches.suse/iavf-Handle-ntuple-on-off-based-on-new-state-machine.patch
 	patches.suse/iavf-Fix-iavf_shutdown-to-call-iavf_remove-instead-i.patch
