--- a/series.conf
+++ b/series.conf
@@ -14881,6 +14881,7 @@
 	patches.suse/iavf-Handle-ntuple-on-off-based-on-new-state-machine.patch
 	patches.suse/iavf-Fix-iavf_shutdown-to-call-iavf_remove-instead-i.patch
 	patches.suse/net-stmmac-Handle-disabled-MDIO-busses-from-devicetr.patch
+	patches.suse/net-atlantic-fix-double-free-in-ring-reinit-logic.patch
 	patches.suse/platform-x86-intel-vbtn-Fix-missing-tablet-mode-swit.patch
 	patches.suse/smb-client-fix-OOB-in-receive_encrypted_standard-.patch
 	patches.suse/drm-mediatek-fix-kernel-oops-if-no-crtc-is-found.patch
