--- a/series.conf
+++ b/series.conf
@@ -14971,6 +14971,7 @@
 	patches.suse/smb-client-fix-OOB-in-smbCalcSize-.patch
 	patches.suse/smb-client-fix-potential-OOB-in-smb2_dump_detail-.patch
 	patches.suse/net-mscc-ocelot-fix-eMAC-TX-RMON-stats-for-bucket-25.patch
+	patches.suse/net-mscc-ocelot-fix-pMAC-TX-RMON-stats-for-bucket-25.patch
 	patches.suse/ice-fix-theoretical-out-of-bounds-access-in-ethtool-.patch
 	patches.suse/i40e-Fix-ST-code-value-for-Clause-45.patch
 	patches.suse/Revert-net-mlx5e-fix-double-free-of-encap_header-in-.patch
