net: ethernet: mtk_wed: fix possible NULL pointer dereference in mtk_wed_wo_queue_tx_clean() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15018,6 +15018,7 @@
 	patches.suse/Bluetooth-MGMT-SMP-Fix-address-type-when-using-SMP-o.patch
 	patches.suse/Bluetooth-Add-more-enc-key-size-check.patch
 	patches.suse/Bluetooth-af_bluetooth-Fix-Use-After-Free-in-bt_sock.patch
+	patches.suse/net-ethernet-mtk_wed-fix-possible-NULL-pointer-deref.patch
 	patches.suse/ice-stop-trashing-VF-VSI-aggregator-node-ID-informat.patch
 	patches.suse/ice-alter-feature-support-check-for-SRIOV-and-LAG.patch
 	patches.suse/ice-Fix-PF-with-enabled-XDP-going-no-carrier-after-r.patch
