--- a/series.conf
+++ b/series.conf
@@ -13410,6 +13410,7 @@
 	patches.suse/PCI-ASPM-Fix-L1-substate-handling-in-aspm_attr_store.patch
 	patches.suse/PCI-Extract-ATS-disabling-to-a-helper-function.patch
 	patches.suse/PCI-Disable-ATS-for-specific-Intel-IPU-E2000-devices.patch
+	patches.suse/0001-PCI-Add-pci_get_base_class-helper.patch
 	patches.suse/PCI-vmd-Correct-PCI-Header-Type-Register-s-multi-fun.patch
 	patches.suse/PCI-exynos-Don-t-discard-.remove-callback.patch
 	patches.suse/PCI-kirin-Don-t-discard-.remove-callback.patch
