nouveau/svm: Replace one-element array with flexible-array member in (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -12445,6 +12445,7 @@
 	patches.suse/rcutorture-Traverse-possible-cpu-to-set-maxcpu-in-rc.patch
 	patches.suse/locktorture-Check-the-correct-variable-for-allocatio.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
+	patches.suse/0003-nouveau-svm-Replace-one-element-array-with-flexible-.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/drbd-Annotate-struct-fifo_buffer-with-__counted_by.patch
