--- a/series.conf
+++ b/series.conf
@@ -12446,6 +12446,7 @@
 	patches.suse/locktorture-Check-the-correct-variable-for-allocatio.patch
 	patches.suse/selftests-lkdtm-Disable-CONFIG_UBSAN_TRAP-in-test-co.patch
 	patches.suse/0003-nouveau-svm-Replace-one-element-array-with-flexible-.patch
+	patches.suse/0004-nouveau-svm-Split-assignment-from-if-conditional.patch
 	patches.suse/drm-gud-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/usb-atm-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/drbd-Annotate-struct-fifo_buffer-with-__counted_by.patch
