--- a/series.conf
+++ b/series.conf
@@ -13013,6 +13013,7 @@
 	patches.suse/clk-npcm7xx-Fix-incorrect-kfree.patch
 	patches.suse/power-supply-core-Use-blocking_notifier_call_chain-t.patch
 	patches.suse/of-address-Fix-address-translation-when-address-size.patch
+	patches.suse/0006-drm-rockchip-vop-Add-rv1126-vop_lite-support.patch
 	patches.suse/drm-bridge-samsung-dsim-Initialize-ULPS-EXIT-for-i.M.patch
 	patches.suse/drm-bridge-for-GENERIC_PHY_MIPI_DPHY-also-select-GEN.patch
 	patches.suse/drm-bridge-samsung-dsim-Fix-waiting-for-empty-cmd-tr.patch
