--- a/series.conf
+++ b/series.conf
@@ -13015,6 +13015,7 @@
 	patches.suse/of-address-Fix-address-translation-when-address-size.patch
 	patches.suse/0006-drm-rockchip-vop-Add-rv1126-vop_lite-support.patch
 	patches.suse/0007-drm-rockchip-dsi-Add-rv1126-MIPI-DSI-support.patch
+	patches.suse/0008-accel-ivpu-Document-DRM_IVPU_PARAM_CAPABILITIES.patch
 	patches.suse/drm-bridge-samsung-dsim-Initialize-ULPS-EXIT-for-i.M.patch
 	patches.suse/drm-bridge-for-GENERIC_PHY_MIPI_DPHY-also-select-GEN.patch
 	patches.suse/drm-bridge-samsung-dsim-Fix-waiting-for-empty-cmd-tr.patch
