drm/bridge: lvds-codec: Implement atomic_get_input_bus_fmts for LVDS (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13019,6 +13019,7 @@
 	patches.suse/drm-bridge-samsung-dsim-Initialize-ULPS-EXIT-for-i.M.patch
 	patches.suse/drm-bridge-for-GENERIC_PHY_MIPI_DPHY-also-select-GEN.patch
 	patches.suse/drm-bridge-samsung-dsim-Fix-waiting-for-empty-cmd-tr.patch
+	patches.suse/0012-drm-bridge-lvds-codec-Implement-atomic_get_input_bus.patch
 	patches.suse/drm-loongson-Fix-error-handling-in-lsdc_pixel_pll_se.patch
 	patches.suse/drm-rockchip-vop-Fix-reset-of-state-in-duplicate-sta.patch
 	patches.suse/drm-rockchip-vop-Fix-call-to-crtc-reset-helper.patch
