--- a/series.conf
+++ b/series.conf
@@ -13022,6 +13022,7 @@
 	patches.suse/0012-drm-bridge-lvds-codec-Implement-atomic_get_input_bus.patch
 	patches.suse/drm-loongson-Fix-error-handling-in-lsdc_pixel_pll_se.patch
 	patches.suse/drm-rockchip-vop-Fix-reset-of-state-in-duplicate-sta.patch
+	patches.suse/0015-drm-rockchip-vop-Use-cleanup-helper-directly-as-dest.patch
 	patches.suse/drm-rockchip-vop-Fix-call-to-crtc-reset-helper.patch
 	patches.suse/drm-rockchip-vop2-Don-t-crash-for-invalid-duplicate_.patch
 	patches.suse/drm-rockchip-vop2-Add-missing-call-to-crtc-reset-hel.patch
