--- a/series.conf
+++ b/series.conf
@@ -13026,6 +13026,7 @@
 	patches.suse/drm-rockchip-vop-Fix-call-to-crtc-reset-helper.patch
 	patches.suse/drm-rockchip-vop2-Don-t-crash-for-invalid-duplicate_.patch
 	patches.suse/drm-rockchip-vop2-Add-missing-call-to-crtc-reset-hel.patch
+	patches.suse/0019-drm-bridge-panel-Add-a-device-link-between-drm-devic.patch
 	patches.suse/drm-bridge-Fix-kernel-doc-typo-in-desc-of-output_bus.patch
 	patches.suse/drm-gma500-Fix-call-trace-when-psb_gem_mm_init-fails.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
