--- a/series.conf
+++ b/series.conf
@@ -13028,6 +13028,7 @@
 	patches.suse/drm-rockchip-vop2-Add-missing-call-to-crtc-reset-hel.patch
 	patches.suse/0019-drm-bridge-panel-Add-a-device-link-between-drm-devic.patch
 	patches.suse/0020-drm-panel-simple-Add-support-for-Mitsubishi-AA084XE0.patch
+	patches.suse/0021-drm-panel-JDI-LT070ME05000-drop-broken-link.patch
 	patches.suse/drm-bridge-Fix-kernel-doc-typo-in-desc-of-output_bus.patch
 	patches.suse/drm-gma500-Fix-call-trace-when-psb_gem_mm_init-fails.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
