drm/panfrost: Do not check for 0 return after calling (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13031,6 +13031,7 @@
 	patches.suse/0021-drm-panel-JDI-LT070ME05000-drop-broken-link.patch
 	patches.suse/0022-drm-panel-Add-driver-for-JDI-LPM102A188A.patch
 	patches.suse/drm-bridge-Fix-kernel-doc-typo-in-desc-of-output_bus.patch
+	patches.suse/0024-drm-panfrost-Do-not-check-for-0-return-after-calling.patch
 	patches.suse/drm-gma500-Fix-call-trace-when-psb_gem_mm_init-fails.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
