--- a/series.conf
+++ b/series.conf
@@ -13033,6 +13033,7 @@
 	patches.suse/drm-bridge-Fix-kernel-doc-typo-in-desc-of-output_bus.patch
 	patches.suse/0024-drm-panfrost-Do-not-check-for-0-return-after-calling.patch
 	patches.suse/0025-doc-uapi-Add-document-describing-dma-buf-semantics.patch
+	patches.suse/0026-drm-gma500-remove-duplicate-macro-definitions.patch
 	patches.suse/drm-gma500-Fix-call-trace-when-psb_gem_mm_init-fails.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
