drm/repaper: fix -Wvoid-pointer-to-enum-cast warning (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13036,6 +13036,7 @@
 	patches.suse/0026-drm-gma500-remove-duplicate-macro-definitions.patch
 	patches.suse/drm-gma500-Fix-call-trace-when-psb_gem_mm_init-fails.patch
 	patches.suse/0028-drm-gma500-Remove-unused-declarations.patch
+	patches.suse/0029-drm-repaper-fix-Wvoid-pointer-to-enum-cast-warning.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
