--- a/series.conf
+++ b/series.conf
@@ -13037,6 +13037,7 @@
 	patches.suse/drm-gma500-Fix-call-trace-when-psb_gem_mm_init-fails.patch
 	patches.suse/0028-drm-gma500-Remove-unused-declarations.patch
 	patches.suse/0029-drm-repaper-fix-Wvoid-pointer-to-enum-cast-warning.patch
+	patches.suse/0030-drm-tests-Test-default-pitch-fallback.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
