--- a/series.conf
+++ b/series.conf
@@ -13038,6 +13038,7 @@
 	patches.suse/0028-drm-gma500-Remove-unused-declarations.patch
 	patches.suse/0029-drm-repaper-fix-Wvoid-pointer-to-enum-cast-warning.patch
 	patches.suse/0030-drm-tests-Test-default-pitch-fallback.patch
+	patches.suse/0031-drm-tests-Add-KUnit-tests-for-drm_fb_swab.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
