--- a/series.conf
+++ b/series.conf
@@ -13042,6 +13042,7 @@
 	patches.suse/0032-drm-tests-Add-KUnit-tests-for-drm_fb_clip_offset.patch
 	patches.suse/0033-drm-tests-Add-KUnit-tests-for-drm_fb_build_fourcc_li.patch
 	patches.suse/0034-drm-tests-Add-multi-plane-support-to-conversion_buf_.patch
+	patches.suse/0035-drm-tests-Add-KUnit-tests-for-drm_fb_memcpy.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
