fbdev/sbus: Build sbuslib.o if CONFIG_FB_SBUS has been selected (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13043,6 +13043,7 @@
 	patches.suse/0033-drm-tests-Add-KUnit-tests-for-drm_fb_build_fourcc_li.patch
 	patches.suse/0034-drm-tests-Add-multi-plane-support-to-conversion_buf_.patch
 	patches.suse/0035-drm-tests-Add-KUnit-tests-for-drm_fb_memcpy.patch
+	patches.suse/0036-fbdev-sbus-Build-sbuslib.o-if-CONFIG_FB_SBUS-has-bee.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
