--- a/series.conf
+++ b/series.conf
@@ -13044,6 +13044,7 @@
 	patches.suse/0034-drm-tests-Add-multi-plane-support-to-conversion_buf_.patch
 	patches.suse/0035-drm-tests-Add-KUnit-tests-for-drm_fb_memcpy.patch
 	patches.suse/0036-fbdev-sbus-Build-sbuslib.o-if-CONFIG_FB_SBUS-has-bee.patch
+	patches.suse/0037-fbdev-sbus-Forward-declare-all-necessary-structures-.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
