fbdev/leo: Use initializer macro for struct fb_ops (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13051,6 +13051,7 @@
 	patches.suse/0041-fbdev-cg3-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/0042-fbdev-cg6-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/0043-fbdev-ffb-Use-initializer-macro-for-struct-fb_ops.patch
+	patches.suse/0044-fbdev-leo-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
