--- a/series.conf
+++ b/series.conf
@@ -13053,6 +13053,7 @@
 	patches.suse/0043-fbdev-ffb-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/0044-fbdev-leo-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/0045-fbdev-p9100-Use-initializer-macro-for-struct-fb_ops.patch
+	patches.suse/0046-fbdev-tcx-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
