drm/debugfs: disallow debugfs access when device isn't registered (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13055,6 +13055,7 @@
 	patches.suse/0045-fbdev-p9100-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/0046-fbdev-tcx-Use-initializer-macro-for-struct-fb_ops.patch
 	patches.suse/0047-drm-debugfs-drop-debugfs_init-for-the-render-and-acc.patch
+	patches.suse/0048-drm-debugfs-disallow-debugfs-access-when-device-isn-.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
