--- a/series.conf
+++ b/series.conf
@@ -13057,6 +13057,7 @@
 	patches.suse/0047-drm-debugfs-drop-debugfs_init-for-the-render-and-acc.patch
 	patches.suse/0048-drm-debugfs-disallow-debugfs-access-when-device-isn-.patch
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
+	patches.suse/0050-drm-debugfs-rework-debugfs-directory-creation-v5.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
 	patches.suse/drm-bridge-lt8912b-Fix-crash-on-bridge-detach.patch
