--- a/series.conf
+++ b/series.conf
@@ -13059,6 +13059,7 @@
 	patches.suse/drm-komeda-drop-all-currently-held-locks-if-deadlock.patch
 	patches.suse/0050-drm-debugfs-rework-debugfs-directory-creation-v5.patch
 	patches.suse/0051-drm-debugfs-remove-dev-debugfs_list-and-debugfs_mute.patch
+	patches.suse/0052-drm-debugfs-rework-drm_debugfs_create_files-implemen.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
 	patches.suse/drm-bridge-lt8912b-Fix-crash-on-bridge-detach.patch
