--- a/series.conf
+++ b/series.conf
@@ -13061,6 +13061,7 @@
 	patches.suse/0051-drm-debugfs-remove-dev-debugfs_list-and-debugfs_mute.patch
 	patches.suse/0052-drm-debugfs-rework-drm_debugfs_create_files-implemen.patch
 	patches.suse/0053-drm-virtio-Remove-unused-function-declarations.patch
+	patches.suse/0054-fbdev-smscufx-Use-fb_ops-helpers-for-deferred-I-O.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
 	patches.suse/drm-bridge-lt8912b-Fix-crash-on-bridge-detach.patch
