x86/entry_64: Add VERW just before userspace transition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45142,6 +45142,7 @@
 
 	# tip/tip
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
+	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
@@ -45190,8 +45191,6 @@
 	patches.suse/ALSA-hda-Disable-power-save-on-KONTRON-SinglePC.patch
 	patches.suse/scsi-lpfc-use-unsigned-type-for-num_sge.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
-
-	# prep patches 
 
 	########################################################
 	# kbuild/module infrastructure fixes
