--- a/series.conf
+++ b/series.conf
@@ -23547,6 +23547,7 @@
 
 	# tip/tip
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
+	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
@@ -23586,8 +23587,6 @@
 	patches.suse/ALSA-hda-Disable-power-save-on-KONTRON-SinglePC.patch
 	patches.suse/scsi-lpfc-use-unsigned-type-for-num_sge.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
-
-	# prep patches 
 
 	########################################################
 	# kbuild/module infrastructure fixes
