--- a/series.conf
+++ b/series.conf
@@ -58726,6 +58726,7 @@
 
 	# tip/tip
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
+	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
 
 
 	########################################################
