x86/bugs: Add asm helpers for executing VERW (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16825,6 +16825,7 @@
 	patches.suse/crypto-ccp-Add-the-SNP_PLATFORM_STATUS-command
 	patches.suse/crypto-ccp-Add-the-SNP_COMMIT-command
 	patches.suse/crypto-ccp-Add-the-SNP_SET_CONFIG-command
+	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
