--- a/series.conf
+++ b/series.conf
@@ -23551,6 +23551,7 @@
 	patches.suse/x86-entry_32-Add-VERW-just-before-userspace-transition.patch
 	patches.suse/x86-bugs-Use-ALTERNATIVE-instead-of-mds_user_clear-static-.patch
 	patches.suse/KVM-VMX-Use-BT-JNC-i.e.-EFLAGS.CF-to-select-VMRESUME-vs.-V.patch
+	patches.suse/KVM-VMX-Move-VERW-closer-to-VMentry-for-MDS-mitigation.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
