--- a/series.conf
+++ b/series.conf
@@ -58728,6 +58728,7 @@
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
 	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
 	patches.suse/x86-entry_32-Add-VERW-just-before-userspace-transition.patch
+	patches.suse/x86-bugs-Use-ALTERNATIVE-instead-of-mds_user_clear-static-.patch
 
 
 	########################################################
