--- a/series.conf
+++ b/series.conf
@@ -58729,6 +58729,7 @@
 	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
 	patches.suse/x86-entry_32-Add-VERW-just-before-userspace-transition.patch
 	patches.suse/x86-bugs-Use-ALTERNATIVE-instead-of-mds_user_clear-static-.patch
+	patches.suse/KVM-VMX-Use-BT-JNC-i.e.-EFLAGS.CF-to-select-VMRESUME-vs.-V.patch
 
 
 	########################################################
