--- a/series.conf
+++ b/series.conf
@@ -23550,6 +23550,7 @@
 	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
 	patches.suse/x86-entry_32-Add-VERW-just-before-userspace-transition.patch
 	patches.suse/x86-bugs-Use-ALTERNATIVE-instead-of-mds_user_clear-static-.patch
+	patches.suse/KVM-VMX-Use-BT-JNC-i.e.-EFLAGS.CF-to-select-VMRESUME-vs.-V.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
