--- a/series.conf
+++ b/series.conf
@@ -23545,6 +23545,9 @@
 	patches.suse/netfilter-nf_tables-reject-QUEUE-DROP-verdict-parame.patch
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 
+	# tip/tip
+	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
+
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
 
@@ -23583,6 +23586,8 @@
 	patches.suse/ALSA-hda-Disable-power-save-on-KONTRON-SinglePC.patch
 	patches.suse/scsi-lpfc-use-unsigned-type-for-num_sge.patch
 	patches.suse/wifi-brcmfmac-Fix-use-after-free-bug-in-brcmf_cfg802.patch
+
+	# prep patches 
 
 	########################################################
 	# kbuild/module infrastructure fixes
