--- a/series.conf
+++ b/series.conf
@@ -16827,6 +16827,7 @@
 	patches.suse/crypto-ccp-Add-the-SNP_SET_CONFIG-command
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
 	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
+	patches.suse/x86-entry_32-Add-VERW-just-before-userspace-transition.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
