--- a/series.conf
+++ b/series.conf
@@ -58727,6 +58727,7 @@
 	# tip/tip
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
 	patches.suse/x86-entry_64-Add-VERW-just-before-userspace-transition.patch
+	patches.suse/x86-entry_32-Add-VERW-just-before-userspace-transition.patch
 
 
 	########################################################
