--- a/series.conf
+++ b/series.conf
@@ -13064,6 +13064,7 @@
 	patches.suse/0054-fbdev-smscufx-Use-fb_ops-helpers-for-deferred-I-O.patch
 	patches.suse/0055-fbdev-udlfb-Use-fb_ops-helpers-for-deferred-I-O.patch
 	patches.suse/0056-fbdev-Add-Kconfig-macro-FB_IOMEM_HELPERS_DEFERRED.patch
+	patches.suse/0057-fbdev-hyperv_fb-Use-fb_ops-helpers-for-deferred-I-O.patch
 	patches.suse/drm-bridge-it66121-Fix-invalid-connector-dereference.patch
 	patches.suse/drm-bridge-lt8912b-Fix-bridge_detach.patch
 	patches.suse/drm-bridge-lt8912b-Fix-crash-on-bridge-detach.patch
