drm/bridge: Drop conditionals around of_node pointers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13072,6 +13072,7 @@
 	patches.suse/drm-bridge-lt8912b-Manually-disable-HPD-only-if-it-w.patch
 	patches.suse/drm-bridge-lt8912b-Add-missing-drm_bridge_attach-cal.patch
 	patches.suse/0064-drm-bridge-analogix-anx78xx-Drop-ID-table.patch
+	patches.suse/0065-drm-bridge-Drop-conditionals-around-of_node-pointers.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
