drm/connector: document DRM_MODE_COLORIMETRY_COUNT (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13074,6 +13074,7 @@
 	patches.suse/0064-drm-bridge-analogix-anx78xx-Drop-ID-table.patch
 	patches.suse/0065-drm-bridge-Drop-conditionals-around-of_node-pointers.patch
 	patches.suse/0066-drm-bridge-Drop-CONFIG_OF-conditionals-around-of_nod.patch
+	patches.suse/0067-drm-connector-document-DRM_MODE_COLORIMETRY_COUNT.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
