drm/doc/rfc: Mark DRM_VM_BIND as complete. (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13077,6 +13077,7 @@
 	patches.suse/0067-drm-connector-document-DRM_MODE_COLORIMETRY_COUNT.patch
 	patches.suse/0068-drm-doc-rfc-No-STAGING-out-of-drivers-staging.patch
 	patches.suse/0069-drm-doc-rfc-Mark-Dev_coredump-as-completed.patch
+	patches.suse/0070-drm-doc-rfc-Mark-DRM_VM_BIND-as-complete.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
