--- a/series.conf
+++ b/series.conf
@@ -13078,6 +13078,7 @@
 	patches.suse/0068-drm-doc-rfc-No-STAGING-out-of-drivers-staging.patch
 	patches.suse/0069-drm-doc-rfc-Mark-Dev_coredump-as-completed.patch
 	patches.suse/0070-drm-doc-rfc-Mark-DRM_VM_BIND-as-complete.patch
+	patches.suse/0071-drm-doc-rfc-Mark-GPU-VA-as-complete.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
