drm/tests: Zero initialize fourccs_out (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13080,6 +13080,7 @@
 	patches.suse/0070-drm-doc-rfc-Mark-DRM_VM_BIND-as-complete.patch
 	patches.suse/0071-drm-doc-rfc-Mark-GPU-VA-as-complete.patch
 	patches.suse/0072-drm-debugfs-Add-inline-to-drm_debugfs_dev_init-to-su.patch
+	patches.suse/0073-drm-tests-Zero-initialize-fourccs_out.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
