drm/imx/ipuv3: Convert to platform remove callback returning void (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13083,6 +13083,7 @@
 	patches.suse/0073-drm-tests-Zero-initialize-fourccs_out.patch
 	patches.suse/0074-drm-mst-delete-unnecessary-case-in-drm_dp_add_payloa.patch
 	patches.suse/0075-drm-mst-Refactor-the-flow-for-payload-allocation-rem.patch
+	patches.suse/0076-drm-imx-ipuv3-Convert-to-platform-remove-callback-re.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
