fbdev/core: Move logo functions into separate source file (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13094,6 +13094,7 @@
 	patches.suse/0084-fbdev-mmp-mmpfb-Do-not-display-boot-up-logo.patch
 	patches.suse/0085-fbdev-core-Fix-style-of-code-for-boot-up-logo.patch
 	patches.suse/0086-fbdev-core-Unexport-logo-helpers.patch
+	patches.suse/0087-fbdev-core-Move-logo-functions-into-separate-source-.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
