drm/amdgpu: Move the size computations to drm buddy (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13098,6 +13098,7 @@
 	patches.suse/0088-fbdev-core-Remove-empty-internal-helpers-from-fb_log.patch
 	patches.suse/0089-fbdev-core-Clean-up-include-statements-in-fbmem.c.patch
 	patches.suse/0090-drm-buddy-Improve-contiguous-memory-allocation.patch
+	patches.suse/0091-drm-amdgpu-Move-the-size-computations-to-drm-buddy.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
