drm/panel: otm8009a: Don't double check prepared/enabled (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13102,6 +13102,7 @@
 	patches.suse/0092-drm-i915-Move-the-size-computations-to-drm-buddy.patch
 	patches.suse/0093-drm-panel-Don-t-store-check-prepared-enabled-for-sim.patch
 	patches.suse/0094-drm-panel-s6e63m0-Don-t-store-check-prepared-enabled.patch
+	patches.suse/0095-drm-panel-otm8009a-Don-t-double-check-prepared-enabl.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
