drm/ingenic: Call drm_atomic_helper_shutdown() at shutdown time (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13105,6 +13105,7 @@
 	patches.suse/0095-drm-panel-otm8009a-Don-t-double-check-prepared-enabl.patch
 	patches.suse/0096-drm-atomic-helper-drm_atomic_helper_shutdown-NULL-sh.patch
 	patches.suse/0097-drm-imx-ipuv3-Call-drm_atomic_helper_shutdown-at-shu.patch
+	patches.suse/0098-drm-ingenic-Call-drm_atomic_helper_shutdown-at-shutd.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
