drm/ssd130x: Store the HW buffer in the driver-private CRTC state (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13108,6 +13108,7 @@
 	patches.suse/0098-drm-ingenic-Call-drm_atomic_helper_shutdown-at-shutd.patch
 	patches.suse/0099-drm-amd-display-Fix-Wuninitialized-in-dm_helpers_dp_.patch
 	patches.suse/0100-drm-debugfs-Fix-drm_debugfs_remove_files-stub.patch
+	patches.suse/0101-drm-ssd130x-Store-the-HW-buffer-in-the-driver-privat.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
