drm/dp_mst: Sanitize error return during payload addition (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13116,6 +13116,7 @@
 	patches.suse/0106-drm-nouveau-pm-refactor-deprecated-strncpy.patch
 	patches.suse/0107-drm-bridge-dw-hdmi-cec-Add-arbitration-lost-event.patch
 	patches.suse/0108-drm-dp_mst-Fix-NULL-dereference-during-payload-addit.patch
+	patches.suse/0109-drm-dp_mst-Sanitize-error-return-during-payload-addi.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
