drm/nouveau/mmu/gp100-: always invalidate TLBs at CACHE_LEVEL_ALL (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13121,6 +13121,7 @@
 	patches.suse/0111-drm-nouveau-devinit-tu102-remove-attempt-at-loading-.patch
 	patches.suse/0112-drm-nouveau-imem-support-allocations-not-preserved-a.patch
 	patches.suse/0113-drm-nouveau-gr-gf100-lose-contents-of-global-ctxbufs.patch
+	patches.suse/0114-drm-nouveau-mmu-gp100-always-invalidate-TLBs-at-CACH.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
