drm/nouveau/disp: add acquire_dac() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13129,6 +13129,7 @@
 	patches.suse/0119-drm-nouveau-disp-rename-internal-output-acquire-rele.patch
 	patches.suse/0120-drm-nouveau-kms-Add-INHERIT-ioctl-to-nvkm-nvif-for-r.patch
 	patches.suse/0121-drm-nouveau-disp-shuffle-to-make-upcoming-diffs-pret.patch
+	patches.suse/0122-drm-nouveau-disp-add-acquire_dac.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
