drm/nouveau/kms/nv50-: remove nv_encoder.audio.connector (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13133,6 +13133,7 @@
 	patches.suse/0123-drm-nouveau-disp-add-acquire_sor-pior.patch
 	patches.suse/0124-drm-nouveau-disp-update-SOR-routing-immediately-on-a.patch
 	patches.suse/0125-drm-nouveau-kms-nv50-pull-some-common-init-out-of-OR.patch
+	patches.suse/0126-drm-nouveau-kms-nv50-remove-nv_encoder.audio.connect.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
