drm/nouveau/disp: release outputs post-modeset (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13138,6 +13138,7 @@
 	patches.suse/0128-drm-nouveau-kms-nv50-move-audio-enable-post-modeset.patch
 	patches.suse/0129-drm-nouveau-disp-add-output-hdmi-config-method.patch
 	patches.suse/0130-drm-nouveau-disp-move-hdmi-disable-out-of-release.patch
+	patches.suse/0131-drm-nouveau-disp-release-outputs-post-modeset.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
