drm/nouveau/disp: add hdmi audio hal function (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13142,6 +13142,7 @@
 	patches.suse/0132-drm-nouveau-disp-remove-SOR-routing-updates-from-sup.patch
 	patches.suse/0133-drm-nouveau-disp-add-output-backlight-control-method.patch
 	patches.suse/0134-drm-nouveau-disp-add-output-lvds-config-method.patch
+	patches.suse/0135-drm-nouveau-disp-add-hdmi-audio-hal-function.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
