drm/nouveau/disp: add dp rates method (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13145,6 +13145,7 @@
 	patches.suse/0135-drm-nouveau-disp-add-hdmi-audio-hal-function.patch
 	patches.suse/0136-drm-nouveau-disp-move-dp-aux-pwr-method-to-HAL.patch
 	patches.suse/0137-drm-nouveau-disp-add-dp-aux-xfer-method.patch
+	patches.suse/0138-drm-nouveau-disp-add-dp-rates-method.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
