drm/nouveau/kms/nv50-: fixup sink D3 before tearing down link (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13148,6 +13148,7 @@
 	patches.suse/0138-drm-nouveau-disp-add-dp-rates-method.patch
 	patches.suse/0139-drm-nouveau-kms-nv50-split-DP-disable-enable-into-tw.patch
 	patches.suse/0140-drm-nouveau-kms-nv50-flush-mst-disables-together.patch
+	patches.suse/0141-drm-nouveau-kms-nv50-fixup-sink-D3-before-tearing-do.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
