powerpc/smp: Increase nr_cpu_ids to include the boot CPU (bsc#1218180 ltc#204476).

--- a/series.conf
+++ b/series.conf
@@ -16696,6 +16696,7 @@
 
 	# powerpc/linux next
 	patches.suse/powerpc-smp-Adjust-nr_cpu_ids-to-cover-all-threads-o.patch
+	patches.suse/powerpc-smp-Increase-nr_cpu_ids-to-include-the-boot-.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
